Fix. Fixed the alignment between the fieldset and section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,7 @@ nav ul li button
 fieldset
 {
     border: 0;
+    height: 450px;
 }
 
 main{
